runtime plots finished

--- a/appendix.tex
+++ b/appendix.tex
@@ -1,10 +1,11 @@
 \begin{appendix}
 
-  \input{appendix_datastructures}
-  %% appendix_lammpsrant
-  \input{appendix_multilayer}
-  \input{appendix_silicon}
-  \input{appendix_alumina}
+  %% \input{appendix_datastructures}
+  \input{appendix_runtime}
+  %% %% appendix_lammpsrant
+  %% \input{appendix_multilayer}
+  %% \input{appendix_silicon}
+  %% \input{appendix_alumina}
 
   %\newpage
   %\addcontentsline{toc}{chapter}{B. Danksagung}
