--- a/masterthesis.tex
+++ b/masterthesis.tex
@@ -46,8 +46,8 @@
 %% \cleardoublepage
 %% \include{summary}
 
-%% \cleardoublepage
-%% \include{appendix}
+\cleardoublepage
+\include{appendix}
 
 %% \include{bibliography}
 
