Feierabend. "runtime" image added

--- a/appendix.tex
+++ b/appendix.tex
@@ -1,11 +1,11 @@
 \begin{appendix}
 
-  %% \input{appendix_datastructures}
+  \input{appendix_datastructures}
   \input{appendix_runtime}
-  %% %% appendix_lammpsrant
-  %% \input{appendix_multilayer}
-  %% \input{appendix_silicon}
-  %% \input{appendix_alumina}
+  %% appendix_lammpsrant
+  \input{appendix_multilayer}
+  \input{appendix_silicon}
+  \input{appendix_alumina}
 
   %\newpage
   %\addcontentsline{toc}{chapter}{B. Danksagung}
