--- a/masterthesis.tex
+++ b/masterthesis.tex
@@ -26,32 +26,32 @@
 
 \begin{document}
 
-%% \include{titel}
+\include{titel}
 
-%% \pagenumbering{roman}
+\pagenumbering{roman}
 
-%% \include{abstract}
-%% \include{contents}
+\include{abstract}
+\include{contents}
 
-%% \pagenumbering{arabic}
+\pagenumbering{arabic}
 
-%% \cleardoublepage
-%% \include{intro}
-%% \cleardoublepage
-%% \include{theory}
-%% \cleardoublepage
-%% \include{models}
-%% \cleardoublepage
-%% \include{results}
-%% \cleardoublepage
-%% \include{summary}
+\cleardoublepage
+\include{intro}
+\cleardoublepage
+\include{theory}
+\cleardoublepage
+\include{models}
+\cleardoublepage
+\include{results}
+\cleardoublepage
+\include{summary}
 
 \cleardoublepage
 \include{appendix}
 
-%% \include{bibliography}
+\include{bibliography}
 
-%% \include{unischeiss}
+\include{unischeiss}
 
 \include{test}
 
@@ -69,3 +69,5 @@
 \todoline{hier und da eine Längenskala}
 \todoline{Kein Umbruch zwischen Bezeichnungen und inline-Formeln}
 \todoline{Kein Seitenumbruch zwischen Erklärungen und Formeln}
+
+\todoline{Gutachter oder Prüfer?}
