--- a/titel.tex
+++ b/titel.tex
@@ -82,7 +82,7 @@
 \publishers{
     \begin{tabbing}
       \hspace*{10.1em}\=\kill
-      \hspace*{4.8em}{Prüfer:}\>\dcexaminerfirst\\[-0.2em]
+      \hspace*{4.8em}{Gutachter:}\>\dcexaminerfirst\\[-0.2em]
                   \>{\small\dcproffirst}\\[0.2em]
                   \>\dcexaminersecond\\[-0.2em]
                   \>{\small\dcprofsecond}\\
