--- a/models.tex
+++ b/models.tex
@@ -1,13 +1,14 @@
 \chapter{Methoden und Modelle}
 \label{models}
-%% \chapter{ReaxFF-Potentiale für SiO$_2$-Abscheidungen}
 
 In diesem Kapitel wird zuerst auf den aktuellen Stand der Forschung eingegangen, bevor das Parsivald-Modell in Abschnitt~\ref{parsivald} vorgestellt wird.
-Zuletzt gibt Abschnitt~\ref{mdmethods} einen Überblick über die verwendeten Methoden und Vorgehensweisen bei den in Kapitel~\ref{results} verwendeten molekulardynamischen Simulationen
+Im Abschluss wird in Abschnitt~\ref{runtime} eine Laufzeitanalyse von Parsivald durchgeführt und die Einschränkungen im Parallelisierungsverhalten betrachtet.
+Zuletzt gibt Abschnitt~\ref{mdmethods} einen Überblick über die verwendeten Methoden und Vorgehensweisen bei den in Kapitel~\ref{results} verwendeten molekulardynamischen Simulationen.
 
 \input{present}
 \clearpage
 \input{parsivald}
 \clearpage
+\input{runtime}
+\clearpage
 \input{mdmethods}
-
